# Foraging

./: .gitignore  README.md  pyproject.toml
notebooks/: Angelaki Belief Analysis (No Color).ipynb  Behavioral Analysis.ipynb  Belief Analysis (No Color).ipynb  Bulk Data Processing.ipynb  Engineering.ipynb
src/foraging/: README.md  __init__.py
src/foraging/config/: logconfig.json  plotconfig.mplstyle
src/foraging/plotting/: __init__.py  _base.py  behavior.py  beliefs.py
src/foraging/utils/: __init__.py  _base.py  beliefs.py  data.py  models.py
