[project]
name = "foraging"
version = "0.1.0"
description = "Package for analyzing behavior and beliefs in POMDP foraging task"
authors = [
    {name = "Noushin Quazi"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)"
]

keywords = ['foraging', 'primates', 'behavioral analysis', 'POMDP']
